# FAT32-UnDelete

./: Cargo.toml  README.md
.github/workflows/: release.yml
locales/: en.json  it.json
src/: gui.rs  i18n.rs  main.rs  output.rs
src/ai/: classifier.rs  cloud_backend.rs  config.rs  local_backend.rs  mod.rs  model_manager.rs  scorer.rs
src/fat32/: bpb.rs  dir_entry.rs  fat_table.rs  mod.rs
src/io/: file_reader.rs  mod.rs  unix_reader.rs  win_reader.rs
src/recovery/: carver.rs  dir_scan.rs  mod.rs  signatures.rs
