[package]
name = "fat32-undelete"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"
description = "Recover deleted files from FAT32 partitions and disk images"
authors = ["Francesco Diomaiuta <francesco@diomabros.it>"]

[features]
default = []
ai = ["ai-local", "ai-cloud"]
ai-local = ["dep:ort", "dep:ndarray"]
ai-cloud = ["dep:reqwest"]

[dependencies]
anyhow = "1"
byteorder = "1"
clap = { version = "4", features = ["derive"] }
eframe = "0.31"
env_logger = "0.11"
indicatif = "0.17"
log = "0.4"
memchr = "2"
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sys-locale = "0.3"

# AI dependencies (optional, behind feature flags)
ort = { version = "2.0.0-rc.12", optional = true }
ndarray = { version = "0.17", optional = true }
reqwest = { version = "0.12", features = ["blocking", "json"], optional = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Storage_FileSystem",
    "Win32_Foundation",
    "Win32_System_IO",
] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
